crates/robotcode-rf-parser/tests/snapshots/parser_test__snapshot_parse_keywords.snap
---
source: crates/robotcode-rf-parser/tests/parser_test.rs
expression: file
---
{
  "sections": [
    {
      "type": "Keywords",
      "header": {
        "name": "*** Keywords ***",
        "position": {
          "line": 0,
          "column": 0,
          "end_line": 0,
          "end_column": 16
        }
      },
      "body": [
        {
          "name": "My Keyword",
          "position": {
            "line": 1,
            "column": 0,
            "end_line": 1,
            "end_column": 10
          },
          "body": [
            {
              "type": "Arguments",
              "args": [
                "${arg1}",
                "${arg2}=default"
              ],
              "position": {
                "line": 2,
                "column": 4,
                "end_line": 2,
                "end_column": 15
              }
            },
            {
              "type": "Documentation",
              "value": "Does something",
              "position": {
                "line": 3,
                "column": 4,
                "end_line": 3,
                "end_column": 19
              }
            },
            {
              "type": "Tags",
              "kind": "Inline",
              "tags": [
                "kw_tag"
              ],
              "position": {
                "line": 4,
                "column": 4,
                "end_line": 4,
                "end_column": 10
              }
            },
            {
              "type": "KeywordCall",
              "assigns": [],
              "name": "Log",
              "args": [
                "${arg1}"
              ],
              "position": {
                "line": 5,
                "column": 4,
                "end_line": 5,
                "end_column": 7
              }
            },
            {
              "type": "Return",
              "values": [
                "${arg2}"
              ],
              "position": {
                "line": 6,
                "column": 4,
                "end_line": 6,
                "end_column": 10
              }
            },
            {
              "type": "EmptyLine",
              "position": {
                "line": 7,
                "column": 0,
                "end_line": 7,
                "end_column": 0
              }
            }
          ]
        },
        {
          "name": "Embedded ${value} Keyword",
          "position": {
            "line": 8,
            "column": 0,
            "end_line": 8,
            "end_column": 25
          },
          "body": [
            {
              "type": "KeywordCall",
              "assigns": [],
              "name": "Log",
              "args": [
                "${value}"
              ],
              "position": {
                "line": 9,
                "column": 4,
                "end_line": 9,
                "end_column": 7
              }
            }
          ]
        }
      ]
    }
  ],
  "source": null
}
