crates/robotcode-rf-parser/tests/snapshots/parser_test__snapshot_parse_settings.snap
---
source: crates/robotcode-rf-parser/tests/parser_test.rs
expression: file
---
{
  "sections": [
    {
      "type": "Settings",
      "header": {
        "name": "*** Settings ***",
        "position": {
          "line": 0,
          "column": 0,
          "end_line": 0,
          "end_column": 16
        }
      },
      "body": [
        {
          "type": "Error",
          "value": "Library    Collections",
          "message": "Unexpected token Data",
          "position": {
            "line": 1,
            "column": 0,
            "end_line": 1,
            "end_column": 7
          }
        },
        {
          "type": "Error",
          "value": "Library    String    WITH NAME    Str",
          "message": "Unexpected token Data",
          "position": {
            "line": 2,
            "column": 0,
            "end_line": 2,
            "end_column": 7
          }
        },
        {
          "type": "Error",
          "value": "Resource    helpers.robot",
          "message": "Unexpected token Data",
          "position": {
            "line": 3,
            "column": 0,
            "end_line": 3,
            "end_column": 8
          }
        },
        {
          "type": "Error",
          "value": "Documentation    Suite documentation    continued on next line",
          "message": "Unexpected token Data",
          "position": {
            "line": 4,
            "column": 0,
            "end_line": 4,
            "end_column": 13
          }
        },
        {
          "type": "Error",
          "value": "Suite Setup    Log    starting",
          "message": "Unexpected token Data",
          "position": {
            "line": 6,
            "column": 0,
            "end_line": 6,
            "end_column": 11
          }
        },
        {
          "type": "Error",
          "value": "Test Tags    smoke    regression",
          "message": "Unexpected token Data",
          "position": {
            "line": 7,
            "column": 0,
            "end_line": 7,
            "end_column": 9
          }
        }
      ]
    }
  ],
  "source": null
}
